# web-youtube-dl

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.rst  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: conftest.py  test_dl_helpers.py  test_utils.py  test_web_youtube_dl.py
web_youtube_dl/: config.py
web_youtube_dl/app/: api.py  main.py  models.py  utils.py  views.py  websocket_manager.py  youtube_dl_helpers.py
web_youtube_dl/app/templates/: index.html  index.html.j2  progress.html.j2  start.html.j2
web_youtube_dl/cli/: main.py
web_youtube_dl/client/: __init__.py  main.py  responses.py
web_youtube_dl/db/: __init__.py  main.py  models.py  repo.py
web_youtube_dl/services/: metadata.py  progress.py  websockets.py  youtube.py
